--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    11111
+    <header>
+      <nav>
+        <a href="#">
+          <img src="" alt="Логотип Космет Клініки" />
+        </a>
+        <ul>
+          <li><a href="#">Про нас</a></li>
+          <li><a href="#">Чому ми</a></li>
+          <li><a href="#">Наші процедури</a></li>
+          <li><a href="#">Контакти</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <p>Косметологічна Клініка</p>
+        <h1>Beauty Zone</h1>
+        <button class="button" type="button">Замовити дзвінок</button>
+      </section>
+    </main>
+    <footer></footer>
   </body>
 </html>
