--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Beauty Zone</title>
   </head>
   <body>
     <header>
@@ -24,8 +24,85 @@
         <p>Косметологічна Клініка</p>
         <h1>Beauty Zone</h1>
         <button class="button" type="button">Замовити дзвінок</button>
+        <p>Запишись та отримай безкоштовну консультацію нашого косметолога</p>
+      </section>
+      <section>
+        <h2>Перевтілюйся в Beauty Zone!</h2>
+        <p>
+          Наша косметологічна клініка пропонує вам професійні послуги з догляду
+          за шкірою обличчя та тіла.
+        </p>
+        <p>
+          B beauty zone ми гарантуємо найвищі стандарти якості та приємний
+          сервіс. Наші косметологічні процедури та препарати допоможуть вам
+          підтримувати свою красу та молодість. З нами краса назавжди!
+        </p>
+        <img src="/images/face1.svg" alt="Лице до" />
+        <img src="/images/face2.svg" alt="Лице після" />
+      </section>
+      <section>
+        <h3>Чому люди обирають нас</h3>
+        <p>
+          Всі наші косметологи мають вищу медичну освіту та стаж роботи від 5
+          років
+        </p>
+        <p>
+          Використовуємо тільки професійне обладнання та косметику, перевірену
+          часом
+        </p>
+        <p>
+          Наша мета - підкреслити переваги та приховати недоліки, а не
+          переробити
+        </p>
+      </section>
+      <section>
+        <h3>Наші процедури</h3>
+        <p>Маски для обличчя</p>
+        <p>Ін'єкції для обличчя</p>
+        <p>Очищення обличчя</p>
+      </section>
+      <section>
+        <h3>Як нас знайти</h3>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.9694442243854!2d30.51542870236412!3d50.441669806580016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef8b5f6338d%3A0x25c7f06ad686451c!2z0LHRg9C70YzQstCw0YAg0KLQsNGA0LDRgdCwINCo0LXQstGH0LXQvdC60LAsIDUsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1694343412432!5m2!1suk!2sua"
+          width="600"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+        <p>Запишіться безкоштовно та отримайте подарунок</p>
+        <button class="button" type="button">Записатись безкоштовно</button>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <a href="#">
+        <img src="" alt="Логотип Космет Клініки" />
+      </a>
+      <nav>
+        <ul>
+          <li><a href="#">Про нас</a></li>
+          <li><a href="#">Чому ми</a></li>
+          <li><a href="#">Наші процедури</a></li>
+          <li><a href="#">Контакти</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li><a href="tel:+380960000007">+38(096)0000007</a></li>
+          <li>
+            <a href="mailto:beautyzone@gmail.com">beautyzone@gmail.com</a>
+          </li>
+          <li>
+            <a href="https://goo.gl/maps/kTsiAinonsroTgEWA"
+              >Україна, м. Київ, вул. Тараса Шевченка 5</a
+            >
+          </li>
+        </ul>
+      </address>
+      <a href="#">Політика конфіденційності</a>
+      <p>&copy; Данні захищено 2022</p>
+    </footer>
   </body>
 </html>
