--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       <nav>
         <a href="#">
-          <img src="" alt="Логотип Космет Клініки" />
+          <img src="#" alt="Логотип Космет Клініки" />
         </a>
         <ul>
           <li><a href="#">Про нас</a></li>
@@ -78,7 +78,7 @@
     </main>
     <footer>
       <a href="#">
-        <img src="" alt="Логотип Космет Клініки" />
+        <img src="#" alt="Логотип Космет Клініки" />
       </a>
       <nav>
         <ul>
