--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
           <li><a href="#">Наші процедури</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
+        <img src="/images/phonbelogo.svg" alt="подзвонити" />
+        <img src="/images/facebooklogo.svg" alt="Facebook" />
+        <img src="/images/instalogo.svg" alt="instagram" />
       </nav>
     </header>
     <main>
@@ -42,14 +45,17 @@
       </section>
       <section>
         <h3>Чому люди обирають нас</h3>
+        <img src="/images/game-icons_materials-science.svg" alt="icon-logo1" />
         <p>
           Всі наші косметологи мають вищу медичну освіту та стаж роботи від 5
           років
         </p>
+        <img src="/images/medicine.svg" alt="icon-logo2" />
         <p>
           Використовуємо тільки професійне обладнання та косметику, перевірену
           часом
         </p>
+        <img src="/images/ph_crown-light.svg" alt="icon-logo3" />
         <p>
           Наша мета - підкреслити переваги та приховати недоліки, а не
           переробити
@@ -100,6 +106,9 @@
             >
           </li>
         </ul>
+        <img src="/images/phonbelogo.svg" alt="подзвонити" />
+        <img src="/images/facebooklogo.svg" alt="Facebook" />
+        <img src="/images/instalogo.svg" alt="instagram" />
       </address>
       <a href="#">Політика конфіденційності</a>
       <p>&copy; Данні захищено 2022</p>
