--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
       </address>
       <a href="#">Політика конфіденційності</a>
       <p>&copy; Данні захищено 2022</p>
+      <img src="/images/photomed.svg" alt="нижня картинка" />
     </footer>
   </body>
 </html>
