--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beauty Zone</title>
+    <!-- styles -->
+    <link rel="stylesheet" href="./css/styles.css" />
+    <!-- styles -->
   </head>
   <body>
     <header>
       <nav>
-        <a href="#">
-          <img src="#" alt="Логотип Космет Клініки" />
+        <a href="index.html">
+          <img src="./images/logo.svg" alt="Логотип Космет Клініки" />
         </a>
         <ul>
-          <li><a href="#">Про нас</a></li>
-          <li><a href="#">Чому ми</a></li>
-          <li><a href="#">Наші процедури</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a class="link" href="#">Про нас</a></li>
+          <li><a class="link" href="#">Чому ми</a></li>
+          <li><a class="link" href="#">Наші процедури</a></li>
+          <li><a class="link" href="#">Контакти</a></li>
         </ul>
         <img src="/images/phonbelogo.svg" alt="подзвонити" />
         <img src="/images/facebooklogo.svg" alt="Facebook" />
@@ -84,7 +87,7 @@
     </main>
     <footer>
       <a href="#">
-        <img src="#" alt="Логотип Космет Клініки" />
+        <img src="./images/logo.svg" alt="Логотип Космет Клініки" />
       </a>
       <nav>
         <ul>
