--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
           <li><a class="link" href="#">Наші процедури</a></li>
           <li><a class="link" href="#">Контакти</a></li>
         </ul>
-        <img src="/images/phonbelogo.svg" alt="подзвонити" />
-        <img src="/images/facebooklogo.svg" alt="Facebook" />
-        <img src="/images/instalogo.svg" alt="instagram" />
+        <img class="socsety" src="/images/phonbelogo.svg" alt="подзвонити" />
+        <img class="socsety" src="/images/facebooklogo.svg" alt="Facebook" />
+        <img class="socsety" src="/images/instalogo.svg" alt="instagram" />
       </nav>
     </header>
     <main>
@@ -109,9 +109,9 @@
             >
           </li>
         </ul>
-        <img src="/images/phonbelogo.svg" alt="подзвонити" />
-        <img src="/images/facebooklogo.svg" alt="Facebook" />
-        <img src="/images/instalogo.svg" alt="instagram" />
+        <img class="socsety" src="/images/phonbelogo.svg" alt="подзвонити" />
+        <img class="socsety" src="/images/facebooklogo.svg" alt="Facebook" />
+        <img class="socsety" src="/images/instalogo.svg" alt="instagram" />
       </address>
       <a href="#">Політика конфіденційності</a>
       <p>&copy; Данні захищено 2022</p>
