--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
           <img src="./images/logo.svg" alt="Логотип Космет Клініки" />
         </a>
         <ul>
-          <li><a class="link" href="#">Про нас</a></li>
-          <li><a class="link" href="#">Чому ми</a></li>
-          <li><a class="link" href="#">Наші процедури</a></li>
-          <li><a class="link" href="#">Контакти</a></li>
+          <li><a class="link" href="index.html">Про нас</a></li>
+          <li><a class="link" href="#what">Чому ми</a></li>
+          <li><a class="link" href="#our">Наші процедури</a></li>
+          <li><a class="link" href="#cotacts">Контакти</a></li>
         </ul>
         <img class="socsety" src="/images/phonbelogo.svg" alt="подзвонити" />
         <img class="socsety" src="/images/facebooklogo.svg" alt="Facebook" />
@@ -31,47 +31,51 @@
         <h1>Beauty Zone</h1>
         <button class="button" type="button">Замовити дзвінок</button>
         <p>Запишись та отримай безкоштовну консультацію нашого косметолога</p>
+        <img src="/images/image1.svg" alt="фон" />
       </section>
       <section>
-        <h2>Перевтілюйся в Beauty Zone!</h2>
-        <p>
+        <h2 class="hero-title">
+          Перевтілюйся в <span class="accent">Beauty Zone!</span>
+        </h2>
+        <p id="text-inf">
           Наша косметологічна клініка пропонує вам професійні послуги з догляду
           за шкірою обличчя та тіла.
         </p>
-        <p>
-          B beauty zone ми гарантуємо найвищі стандарти якості та приємний
-          сервіс. Наші косметологічні процедури та препарати допоможуть вам
-          підтримувати свою красу та молодість. З нами краса назавжди!
+        <p id="text-inf">
+          B <span class="beautyzone">beauty zone</span> ми гарантуємо найвищі
+          стандарти якості та приємний сервіс. Наші косметологічні процедури та
+          препарати допоможуть вам підтримувати свою красу та молодість. З нами
+          краса назавжди!
         </p>
         <img src="/images/face1.svg" alt="Лице до" />
         <img src="/images/face2.svg" alt="Лице після" />
       </section>
       <section>
-        <h3>Чому люди обирають нас</h3>
+        <h3 id="what">Чому люди <span class="hero-h3">обирають нас</span></h3>
         <img src="/images/game-icons_materials-science.svg" alt="icon-logo1" />
-        <p>
+        <p id="text-inf2">
           Всі наші косметологи мають вищу медичну освіту та стаж роботи від 5
           років
         </p>
         <img src="/images/medicine.svg" alt="icon-logo2" />
-        <p>
+        <p id="text-inf2">
           Використовуємо тільки професійне обладнання та косметику, перевірену
           часом
         </p>
         <img src="/images/ph_crown-light.svg" alt="icon-logo3" />
-        <p>
+        <p id="text-inf2">
           Наша мета - підкреслити переваги та приховати недоліки, а не
           переробити
         </p>
       </section>
       <section>
-        <h3>Наші процедури</h3>
-        <p>Маски для обличчя</p>
-        <p>Ін'єкції для обличчя</p>
-        <p>Очищення обличчя</p>
+        <h3 id="our">Наші <span class="hero-h3">процедури</span></h3>
+        <img src="/images/image2.svg" alt="fon2" />
+        <img src="/images/image3.svg" alt="fon3" />
+        <img src="/images/image4.svg" alt="fon4" />
       </section>
       <section>
-        <h3>Як нас знайти</h3>
+        <h3 id="contacts">Як нас <span class="hero-h3">знайти</span></h3>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.9694442243854!2d30.51542870236412!3d50.441669806580016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef8b5f6338d%3A0x25c7f06ad686451c!2z0LHRg9C70YzQstCw0YAg0KLQsNGA0LDRgdCwINCo0LXQstGH0LXQvdC60LAsIDUsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1694343412432!5m2!1suk!2sua"
           width="600"
@@ -91,10 +95,10 @@
       </a>
       <nav>
         <ul>
-          <li><a href="#">Про нас</a></li>
-          <li><a href="#">Чому ми</a></li>
-          <li><a href="#">Наші процедури</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a class="link2" href="#index.html">Про нас</a></li>
+          <li><a class="link2" href="#what">Чому ми</a></li>
+          <li><a class="link2" href="#our">Наші процедури</a></li>
+          <li><a class="link2" href="#contacts">Контакти</a></li>
         </ul>
       </nav>
       <address>
