--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
           <li><a class="link" href="#our">Наші процедури</a></li>
           <li><a class="link" href="#cotacts">Контакти</a></li>
         </ul>
-        <img class="socsety" src="/images/phonbelogo.svg" alt="подзвонити" />
-        <img class="socsety" src="/images/facebooklogo.svg" alt="Facebook" />
-        <img class="socsety" src="/images/instalogo.svg" alt="instagram" />
+        <img class="socsety" src="./images/phonbelogo.svg" alt="подзвонити" />
+        <img class="socsety" src="./images/facebooklogo.svg" alt="Facebook" />
+        <img class="socsety" src="./images/instalogo.svg" alt="instagram" />
       </nav>
     </header>
     <main>
@@ -31,7 +31,7 @@
         <h1>Beauty Zone</h1>
         <button class="button" type="button">Замовити дзвінок</button>
         <p>Запишись та отримай безкоштовну консультацію нашого косметолога</p>
-        <img src="/images/image1.svg" alt="фон" />
+        <img src="./images/image 1.png" alt="фон" />
       </section>
       <section>
         <h2 class="hero-title">
@@ -47,22 +47,22 @@
           препарати допоможуть вам підтримувати свою красу та молодість. З нами
           краса назавжди!
         </p>
-        <img src="/images/face1.svg" alt="Лице до" />
-        <img src="/images/face2.svg" alt="Лице після" />
+        <img src="./images/face1.png" alt="Лице до" />
+        <img src="./images/face2.png" alt="Лице після" />
       </section>
       <section>
         <h3 id="what">Чому люди <span class="hero-h3">обирають нас</span></h3>
-        <img src="/images/game-icons_materials-science.svg" alt="icon-logo1" />
+        <img src="./images/game-icons_materials-science.svg" alt="icon-logo1" />
         <p id="text-inf2">
           Всі наші косметологи мають вищу медичну освіту та стаж роботи від 5
           років
         </p>
-        <img src="/images/medicine.svg" alt="icon-logo2" />
+        <img src="./images/medicine.svg" alt="icon-logo2" />
         <p id="text-inf2">
           Використовуємо тільки професійне обладнання та косметику, перевірену
           часом
         </p>
-        <img src="/images/ph_crown-light.svg" alt="icon-logo3" />
+        <img src="./images/ph_crown-light.svg" alt="icon-logo3" />
         <p id="text-inf2">
           Наша мета - підкреслити переваги та приховати недоліки, а не
           переробити
@@ -70,9 +70,9 @@
       </section>
       <section>
         <h3 id="our">Наші <span class="hero-h3">процедури</span></h3>
-        <img src="/images/image2.svg" alt="fon2" />
-        <img src="/images/image3.svg" alt="fon3" />
-        <img src="/images/image4.svg" alt="fon4" />
+        <img src="./images/image2.png" alt="fon2" />
+        <img src="./images/image3.png" alt="fon3" />
+        <img src="./images/image4.png" alt="fon4" />
       </section>
       <section>
         <h3 id="contacts">Як нас <span class="hero-h3">знайти</span></h3>
@@ -113,13 +113,13 @@
             >
           </li>
         </ul>
-        <img class="socsety" src="/images/phonbelogo.svg" alt="подзвонити" />
-        <img class="socsety" src="/images/facebooklogo.svg" alt="Facebook" />
-        <img class="socsety" src="/images/instalogo.svg" alt="instagram" />
+        <img class="socsety" src="./images/phonbelogo.svg" alt="подзвонити" />
+        <img class="socsety" src="./images/facebooklogo.svg" alt="Facebook" />
+        <img class="socsety" src="./images/instalogo.svg" alt="instagram" />
       </address>
       <a href="#">Політика конфіденційності</a>
       <p>&copy; Данні захищено 2022</p>
-      <img src="/images/photomed.svg" alt="нижня картинка" />
+      <img src="./images/photomed.png" alt="нижня картинка" />
     </footer>
   </body>
 </html>
