--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a class="link" href="index.html">Про нас</a></li>
           <li><a class="link" href="#what">Чому ми</a></li>
           <li><a class="link" href="#our">Наші процедури</a></li>
-          <li><a class="link" href="#cotacts">Контакти</a></li>
+          <li><a class="link" href="#contacts">Контакти</a></li>
         </ul>
         <img class="socsety" src="./images/phonbelogo.svg" alt="подзвонити" />
         <img class="socsety" src="./images/facebooklogo.svg" alt="Facebook" />
