--- a/index.html
+++ b/index.html
@@ -103,12 +103,14 @@
       </nav>
       <address>
         <ul>
-          <li><a href="tel:+380960000007">+38(096)0000007</a></li>
+          <li><a class="link2" href="tel:+380960000007">+38(096)0000007</a></li>
           <li>
-            <a href="mailto:beautyzone@gmail.com">beautyzone@gmail.com</a>
+            <a class="link2" href="mailto:beautyzone@gmail.com"
+              >beautyzone@gmail.com</a
+            >
           </li>
           <li>
-            <a href="https://goo.gl/maps/kTsiAinonsroTgEWA"
+            <a class="link2" href="https://goo.gl/maps/kTsiAinonsroTgEWA"
               >Україна, м. Київ, вул. Тараса Шевченка 5</a
             >
           </li>
@@ -117,8 +119,8 @@
         <img class="socsety" src="./images/facebooklogo.svg" alt="Facebook" />
         <img class="socsety" src="./images/instalogo.svg" alt="instagram" />
       </address>
-      <a href="#">Політика конфіденційності</a>
-      <p>&copy; Данні захищено 2022</p>
+      <a class="link2" href="#">Політика конфіденційності</a>
+      <p class="copy">&copy; Данні захищено 2022</p>
       <img src="./images/photomed.png" alt="нижня картинка" />
     </footer>
   </body>
